  backup.

API Changes
***********

* Many test features were renamed from ``FooFeature`` to ``foo_feature``
  to be consistent with instances being lower case and classes being
  CamelCase. For the features that were more likely to be used, we added a
  deprecation thunk, but not all. (John Arbash Meinel)

* The Transport ``Server.tearDown`` method is now renamed to
  ``stop_server`` for consistency with general naming, and to avoid
  confusion with Python's ``TestCase.tearDown``.  (Martin Pool)

* ``WorkingTree.update`` implementations must now accept a ``revision``
  parameter.

Internals
*********

* New helper osutils.UnicodeOrBytesToBytesWriter which encodes unicode
  objects but passes str objects straight through. This is used for
  selftest but may be useful for diff and other operations that generate
  mixed output. (Robert Collins)

* New exception ``NoRoundtrippingSupport``, for use by foreign branch 
  plugins. (Jelmer Vernooij)

Testing
*******

* ``bzrlib.tests.permute_for_extension`` is a helper that simplifies
  running all tests in the current module, once against a pure python
  implementation, and once against an extension (pyrex/C) implementation.
  It can be used to dramatically simplify the implementation of
  ``load_tests``.  (John Arbash Meinel)

* ``bzrlib.tests.TestCase`` now subclasses ``testtools.testcase.TestCase``.
  This permits features in testtools such as getUniqueInteger and
  getUniqueString to be used. Because of this, testtools version 0.9.2 or
  newer is now a dependency to run bzr selftest. Running with versions of
  testtools less than 0.9.2 will cause bzr to error while loading the test
  suite. (Robert Collins)

* The test progress bar no longer distinguishes tests that 'errored' from
  tests that 'failed' - they're all just failures.
  (Martin Pool)

bzr 2.0.4 (not released yet)
############################

:Codename:
:2.0.4: smooth sailing

Compatibility Breaks
********************

New Features
************

Bug Fixes