@@ -274,7 +274,7 @@ class TestXMLRPCTransport(tests.TestCase):
     def setUp(self):
         tests.TestCase.setUp(self)
         self.server = self.server_class()
-        self.server.setUp()
+        self.server.start_server()
         # Ensure we don't clobber env
         self._captureVar('BZR_LP_XMLRPC_URL', None)
 
