@@ -251,7 +251,7 @@ class SmartTCPServer_for_testing(SmartTCPServer):
         """Get a backing transport from a server we are decorating."""
         return transport.get_transport(backing_transport_server.get_url())
 
-    def setUp(self, backing_transport_server=None,
+    def start_server(self, backing_transport_server=None,
               client_path_extra='/extra/'):
         """Set up server for testing.
 
@@ -273,7 +273,7 @@ class SmartTCPServer_for_testing(SmartTCPServer):
             backing_transport_server = LocalURLServer()
         self.chroot_server = ChrootServer(
             self.get_backing_transport(backing_transport_server))
-        self.chroot_server.setUp()
+        self.chroot_server.start_server()
         self.backing_transport = transport.get_transport(
             self.chroot_server.get_url())
         self.root_client_path = self.client_path_extra = client_path_extra
@@ -386,14 +386,14 @@ class BzrServerFactory(object):
         """Chroot transport, and decorate with userdir expander."""
         self.base_path = self.get_base_path(transport)
         chroot_server = chroot.ChrootServer(transport)
-        chroot_server.setUp()
+        chroot_server.start_server()
         self.cleanups.append(chroot_server.stop_server)
         transport = get_transport(chroot_server.get_url())
         if self.base_path is not None:
             # Decorate the server's backing transport with a filter that can
             # expand homedirs.
             expand_userdirs = self._make_expand_userdirs_filter(transport)
-            expand_userdirs.setUp()
+            expand_userdirs.start_server()
             self.cleanups.append(expand_userdirs.stop_server)
             transport = get_transport(expand_userdirs.get_url())
         self.transport = transport
