@@ -218,7 +218,7 @@ class RecordingServer(object):
     def get_url(self):
         return '%s://%s:%s/' % (self.scheme, self.host, self.port)
 
-    def setUp(self):
+    def start_server(self):
         self._sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
         self._sock.bind(('127.0.0.1', 0))
         self.host, self.port = self._sock.getsockname()
@@ -306,7 +306,7 @@ class TestHTTPServer(tests.TestCase):
 
         server = http_server.HttpServer(BogusRequestHandler)
         try:
-            self.assertRaises(httplib.UnknownProtocol, server.setUp)
+            self.assertRaises(httplib.UnknownProtocol, server.start_server)
         except:
             server.stop_server()
             self.fail('HTTP Server creation did not raise UnknownProtocol')
@@ -314,14 +314,14 @@ class TestHTTPServer(tests.TestCase):
     def test_force_invalid_protocol(self):
         server = http_server.HttpServer(protocol_version='HTTP/0.1')
         try:
-            self.assertRaises(httplib.UnknownProtocol, server.setUp)
+            self.assertRaises(httplib.UnknownProtocol, server.start_server)
         except:
             server.stop_server()
             self.fail('HTTP Server creation did not raise UnknownProtocol')
 
     def test_server_start_and_stop(self):
         server = http_server.HttpServer()
-        server.setUp()
+        server.start_server()
         try:
             self.assertTrue(server._http_running)
         finally:
@@ -428,7 +428,7 @@ class TestHttpTransportUrls(tests.TestCase):
     def test_http_impl_urls(self):
         """There are servers which ask for particular clients to connect"""
         server = self._server()
-        server.setUp()
+        server.start_server()
         try:
             url = server.get_url()
             self.assertTrue(url.startswith('%s://' % self._qualified_prefix))
@@ -765,7 +765,7 @@ class TestRecordingServer(tests.TestCase):
 
     def test_setUp_and_stop(self):
         server = RecordingServer(expect_body_tail=None)
-        server.setUp()
+        server.start_server()
         try:
             self.assertNotEqual(None, server.host)
             self.assertNotEqual(None, server.port)
@@ -1964,7 +1964,7 @@ class TestActivityMixin(object):
     def setUp(self):
         tests.TestCase.setUp(self)
         self.server = self._activity_server(self._protocol_version)
-        self.server.setUp()
+        self.server.start_server()
         self.activities = {}
         def report_activity(t, bytes, direction):
             count = self.activities.get(direction, 0)
@@ -2105,7 +2105,7 @@ class TestActivity(tests.TestCase, TestActivityMixin):
     def setUp(self):
         tests.TestCase.setUp(self)
         self.server = self._activity_server(self._protocol_version)
-        self.server.setUp()
+        self.server.start_server()
         self.activities = {}
         def report_activity(t, bytes, direction):
             count = self.activities.get(direction, 0)
@@ -2136,7 +2136,7 @@ class TestNoReportActivity(tests.TestCase, TestActivityMixin):
         self.server = ActivityHTTPServer('HTTP/1.1')
         self._transport=_urllib.HttpTransport_urllib
 
-        self.server.setUp()
+        self.server.start_server()
 
         # We override at class level because constructors may propagate the
         # bound method and render instance overriding ineffective (an
