@@ -184,8 +184,8 @@ class DecoratorServer(Server):
     get_decorator_class method.
     """
 
-    def setUp(self, server=None):
-        """See bzrlib.transport.Server.setUp.
+    def start_server(self, server=None):
+        """See bzrlib.transport.Server.start_server.
 
         :server: decorate the urls given by server. If not provided a
         LocalServer is created.
@@ -197,7 +197,7 @@ class DecoratorServer(Server):
             from bzrlib.transport.local import LocalURLServer
             self._made_server = True
             self._server = LocalURLServer()
-            self._server.setUp()
+            self._server.start_server()
 
     def stop_server(self):
         if self._made_server:
