@@ -561,11 +561,8 @@ class LocalURLServer(Server):
     this just exists to tell the test code how to get to it.
     """
 
-    def setUp(self):
-        """Setup the server to service requests.
-
-        :param decorated_transport: ignored by this implementation.
-        """
+    def start_server(self):
+        pass
 
     def get_url(self):
         """See Transport.Server.get_url."""
