@@ -303,8 +303,7 @@ class _MemoryLock(object):
 class MemoryServer(Server):
     """Server for the MemoryTransport for testing with."""
 
-    def setUp(self):
-        """See bzrlib.transport.Server.setUp."""
+    def start_server(self):
         self._dirs = {'/':None}
         self._files = {}
         self._locks = {}
@@ -318,9 +317,9 @@ class MemoryServer(Server):
         register_transport(self._scheme, memory_factory)
 
     def stop_server(self):
-        """See bzrlib.transport.Server.stop_server."""
         # unregister this server
         # XXX: why isn't this done? -- mbp 20100106
+        pass
 
     def get_url(self):
         """See bzrlib.transport.Server.get_url."""
